# Graficos

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  cmake_install.cmake  embed_assets.ps1
CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
CMake/libs/glad/: Makefile  cmake_install.cmake
CMake/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
CMake/libs/glfw/src/: Makefile  cmake_install.cmake
CMake/libs/glm/: Makefile  cmake_install.cmake
CMake/libs/glm/glm/: Makefile  cmake_install.cmake
assets/: scene.gltf  voxel_alphabet.glb
data/: prog.fs  prog.vs
include/: GpO.h  embedded_assets.h  floormesh.h  game.h  generator.h  level.h  model.h  obstacle.h  particles.h  sphere.h  wallmesh.h
libs/assimp/: assimp.pc
libs/assimp/contrib/zlib/: CTestTestfile.cmake
libs/assimp/include/assimp/: revision.h
libs/glad/: Makefile
src/: GPO_aux.cpp  GPO_proyecto_final.cpp  floormesh.cpp  game.cpp  generator.cpp  level.cpp  model.cpp  obstacle.cpp  particles.cpp  sphere.cpp  wallmesh.cpp
